# sovereign-organic-cpu

./: CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  LICENSE  README.md
crates/aln_protocol/: Cargo.toml
crates/aln_protocol/src/: channel.rs  error.rs  gateway.rs  lib.rs  packet.rs
crates/biophysical_envelopes/: Cargo.toml
crates/biophysical_envelopes/src/: eco_impact.rs  error.rs  lib.rs  lifeforce.rs  rod.rs  roh.rs  telemetry.rs
crates/did_sovereignty/: Cargo.toml
crates/did_sovereignty/src/: boot_chain.rs  error.rs  evolve_token.rs  identity.rs  lib.rs
crates/neurorights_kernel/: Cargo.toml
crates/neurorights_kernel/src/: audit.rs  error.rs  invariants.rs  lib.rs  policy.rs
crates/organic_cpu_guard/: Cargo.toml
crates/organic_cpu_guard/src/: context.rs  error.rs  lib.rs
docs/: deployment_guide.md  legal_framework.md  tripartite_architecture.md
reality_os/: Cargo.toml
reality_os/src/: audit_log.rs  device_classifier.rs  error.rs  kernel_guard.rs  lib.rs  syscall_wrapper.rs
schemas/aln/: aln_shard.json
schemas/evidence/: evidence_bundle.json  ten_tag_template.json
scripts/: verify_evidence_bundle.py
tests/guard_verification/: Cargo.toml
tests/guard_verification/benches/: guard_benchmark.rs
tests/guard_verification/tests/: envelope_integration_tests.rs  neurorights_guard_tests.rs  roh_guard_tests.rs
