[package]
name = "aln_protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ALN-governed networking stack with corridor-safe semantics and sovereign routing"

[dependencies]
# Workspace dependencies
organic_cpu_guard = { path = "../organic_cpu_guard" }
biophysical_envelopes = { path = "../biophysical_envelopes" }
neurorights_kernel = { path = "../neurorights_kernel" }
did_sovereignty = { path = "../did_sovereignty" }

# Cryptography
did-key.workspace = true
ed25519-dalek.workspace = true
sha3.workspace = true
hex.workspace = true

# Async & Networking
tokio.workspace = true
libp2p.workspace = true
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion = "0.5"

[features]
default = ["sovereign-stack"]
sovereign-stack = []
legacy-shim = ["ros2-compat", "ble-compat"]
ros2-compat = []
ble-compat = []
formal-verification = ["kani"]
reality-os-integration = []

[[bin]]
name = "aln_router"
path = "src/bin/router.rs"

[[bin]]
name = "gateway_shim"
path = "src/bin/gateway.rs"
